--- a/ITMO.ASP.NET/ITMO.ASP.NET.csproj
+++ b/ITMO.ASP.NET/ITMO.ASP.NET.csproj
@@ -68,9 +68,28 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Reg.aspx" />
+    <Content Include="Styles.css" />
     <Content Include="Web.config" />
+    <Content Include="Start.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Reg.aspx.cs">
+      <DependentUpon>Reg.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reg.aspx.designer.cs">
+      <DependentUpon>Reg.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Start.aspx.cs">
+      <DependentUpon>Start.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Start.aspx.designer.cs">
+      <DependentUpon>Start.aspx</DependentUpon>
+    </Compile>
+    <Content Include="App_Code\ResponseRepository.cs" />
+    <Compile Include="GuestResponse.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
