--- a/ITMO.ASP.NET.Lab2/ITMO.ASP.NET.Lab2.csproj
+++ b/ITMO.ASP.NET.Lab2/ITMO.ASP.NET.Lab2.csproj
@@ -69,6 +69,8 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="Reg.aspx" />
+    <Content Include="seeyouthere.html" />
+    <Content Include="sorryyoucantcome.html" />
     <Content Include="Start.aspx" />
     <Content Include="Styles.css" />
     <Content Include="Web.config" />
@@ -88,8 +90,8 @@
     <Compile Include="Start.aspx.designer.cs">
       <DependentUpon>Start.aspx</DependentUpon>
     </Compile>
-    <Content Include="App_Code\GuestResponse.cs" />
-    <Content Include="App_Code\ResponseRepository.cs" />
+    <Compile Include="App_Code\GuestResponse.cs" />
+    <Compile Include="App_Code\ResponseRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
